--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     <img src="CG_logo.png" alt="Logo">           
                 <h1>CyberGuardian</h1>
             </div>
-            <a href="https://drive.google.com/file/d/1PLubKE-joZw4066wIszO4DUWIqXjvQP_/view?usp=sharing" download class="download-button">Download CyberGuardian</a>
+            <a href="https://drive.google.com/file/d/19exThG9P7e6oitEo22K5hK7dku1JubD_/view?usp=drive_link" download class="download-button">Download CyberGuardian</a>
         </center>
     </div>
 </body>
